# together

./: .gitignore  1doc3ker-compo4se.y2m5l  ARCHITECTURE.md  Cargo.toml  LICENSE  TODO.md  feature.md
backend/: .envtemplate  Cargo.toml  Dockerfile  SCHEMA.md
backend/.sqlx/: query-03f93b9c29166b25ed7a384ad8cfd68610d876c51a6934cb27bf0b884f0c1253.json  query-16449a93634ab60ea6fd40360fefc472618f8d3471c3a6f5093df0dcc91d030d.json  query-182a699c462788b28976c50df994737069ed115bd49eb02f3a5c6b645d7d53aa.json  query-234f898647b31c862dfffcf0dcd285227d5e03bd69e1f1ed49fc317f9de2e650.json  query-28e86069e9391049c0a4d6d73e5378a1fa8899ea2672c07db5a51a131c77a1c7.json  query-2fe5bfc9fb8ab3cf53866fcc2c85a02a007051c6bd7d24dfef0ea75546c1d17e.json  query-32ce9c36eed19ae9d67484c37062aa870d5ef66bef3cc058ad0532e50e178f51.json  query-4a0a9852cc1154d1b103d287f0cd77c734c545c2e9dc6d9bb9c596f4c4337f49.json  query-7ceea2996c0590e0dca5f7e8be69ecb746b7519e774840ce7f6d12c6d8024123.json  query-8406f0c9ee6fb6402892ee7062a8ca7d5524a482c933cef55867158207ef4ee1.json  query-858cca2d54a4eccfb4504d0e05ebd4e5bfcdbe50a22c309eb11eb33b49f740e7.json  query-9171c915e463ec13c0d5d14fafc7cc62e39cca186aad35767cb3dcccf3a8382c.json  query-91fb90a3f004e0b6ab808f2430a09767bf56e9b6a322d1094563e0bf018ccdb6.json  query-92fbc2e3c69bebed572a77669981953a58c46018746ef12156b4991a8783121a.json  query-99fedd2cf0bbc5fd6d6944a85ddb67296ff2251e965b297a100b914635c63de3.json  query-9b8eafeccf96feeb25d87a94ad7fcabcd912e363532d56d8f137a066ad515eee.json  query-a2d091c781f7929bf24fbc26659a2ea9e69096da398917ea859c0019760786c2.json  (+4 more)
(+67 files in other folders)
