[package]
name = "together"
version = "0.1.0"
edition = "2024"


[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "attestation_watcher"
path = "bin/attestation_watcher.rs"

[[bin]]
name = "migrate"
path = "bin/migrate.rs"

[[bin]]
name = "backup_db"
path = "bin/backup_db.rs"

[[bin]]
name = "connection_checker"
path = "bin/connection_checker.rs"

[lib]
name = "together"
path = "src/lib.rs"

[dependencies]
# Web server
axum = "0.8.4"
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"

# Database
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
uuid = { version = "1.18.0", features = ["v4", "serde"] }
chrono = { version = "0.4.41", features = ["serde"] }
chrono-tz = "0.10.4"

# Text processing
regex = "1.11.2"
once_cell = "1.21.3"

# HTTP client
reqwest = { version = "0.12.13", default-features = false, features = ["json", "rustls-tls"] }

# Config/Environment
dotenvy = "0.15.7"

# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# Error handling
anyhow = "1.0.99"
thiserror = "2.0.16"

# Ethereum/Web3
alloy = { version = "1.0.27", features = ["full"] }

# CLI parsing
clap = { version = "4.5.46", features = ["derive"] }

# Random number generation
rand = "0.9.2"

# Hex encoding/decoding
hex = "0.4.3"